-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11, 17
-
Component/s: core-libs
-
b01
-
generic
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8319183 | 11.0.22 | Paul Hohensee | P4 | Resolved | Fixed | b01 |
| JDK-8360627 | openjdk8u472 | Long Yang | P4 | Resolved | Fixed | b01 |
| JDK-8369604 | shenandoah8u472 | Long Yang | P4 | Resolved | Fixed | b01 |
When the wall clock profiler is enabled, `Socket.connect(address, timeout)` does not return after timeout elapses. This happens, because the poll() syscall is repeatedly restarted due to EINTR, but the timeout argument is not adjusted.
I have reproduced the bug in pure Java without a profiler, see attached SocketTimeoutBug.java
The issue happens on JDK 8 and JDK 11. JDK 13 switched the JDK to a new SocketImpl that doesn't have this issue. The old SocketImpl is still present in JDK 17 so it can be duplicated when running with -Djdk.net.usePlainSocketImpl.
- backported by
-
JDK-8319183 Socket.connect does not timeout when profiling
-
- Resolved
-
-
JDK-8360627 Socket.connect does not timeout when profiling
-
- Resolved
-
-
JDK-8369604 Socket.connect does not timeout when profiling
-
- Resolved
-
- causes
-
JDK-8350540 [17u,11u] B8312065.java fails Network is unreachable
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/32e63eb8
-
Commit
openjdk/jdk17u-dev/1ce12c4f
-
Commit(master)
openjdk/jdk8u-dev/8a5c3db3
-
Review
openjdk/jdk11u-dev/2178
-
Review
openjdk/jdk17u-dev/1639
-
Review(master)
openjdk/jdk8u-dev/410