8312065: Socket.connect does not timeout when profiling